# nobleans_playground

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: industrial_ci_action.yml
controllers/spawner/: spawner.py
launch/: simulation.launch.py
srv/: SpawnProto.srv
worlds/: nieuwe_erven.osm  nieuwe_erven.wbt
