<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nobleans_playground</name>
  <version>0.0.1</version>
  <description>Holds a playground for webots for all the robleos to play in :)</description>

  <maintainer email="tim.clephas@nobleo.nl">Tim Clephas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
